add data into a file + implement deleting and moving a doctor